Blender 2.80 crashes when opening a scene created by blender 2.7x with hierarchy duplication set to "group" #65054

Closed
opened 2019-05-24 07:57:49 +02:00 by Alberto Demichelis · 22 comments

System Information
Operating system: Windows 10 Pro
Graphics card: RX 480

Blender Version
2.80, May 24, 01:38:50 - b3f96da2e6

Blender 2.80 crashes when opening a scene created by blender 2.7x that contains a hierarchy that has an object duplication set to "group" and is parented to a mesh.

How to reproduce
open attached blend file
bug1.blend

**System Information** Operating system: Windows 10 Pro Graphics card: RX 480 **Blender Version** 2.80, May 24, 01:38:50 - b3f96da2e605 Blender 2.80 crashes when opening a scene created by blender 2.7x that contains a hierarchy that has an object duplication set to "group" and is parented to a mesh. **How to reproduce** open attached blend file [bug1.blend](https://archive.blender.org/developer/F7064615/bug1.blend)

Added subscriber: @squirrel76

Added subscriber: @squirrel76

#65369 was marked as duplicate of this issue

#65369 was marked as duplicate of this issue

#65249 was marked as duplicate of this issue

#65249 was marked as duplicate of this issue
Bastien Montagne self-assigned this 2019-05-24 09:48:18 +02:00
Bastien Montagne removed their assignment 2019-05-27 12:16:13 +02:00
Campbell Barton was assigned by Bastien Montagne 2019-05-27 12:16:13 +02:00

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29

Fix for #57934 (7fe3d1e7d7) is direct cause of this bug (since you cannot have an empty as armature…).

I don’t think we should ever allow changing object type in our versioning code (besides when current one is no more valid)… A lot of Blender relies on some specific types of objects, going over all object's usages to carefully decide what to do in each case would be a lot of work, and a highly error-prone one too.

So I would rather go with second solution from @Sergey here (Show a warning about unsupported instancing detected.). Or add a new empty to instantiate dupligroup (when there is one!), but imho that case is a bit too much exotic to be worth the effort.

Fix for #57934 (7fe3d1e7d7) is direct cause of this bug (since you cannot have an empty as armature…). I don’t think we should ever allow changing object type in our versioning code (besides when current one is no more valid)… A lot of Blender relies on some specific types of objects, going over all object's usages to carefully decide what to do in each case would be a lot of work, and a highly error-prone one too. So I would rather go with second solution from @Sergey here (Show a warning about unsupported instancing detected.). Or add a new empty to instantiate dupligroup (when there is one!), but imho that case is a bit too much exotic to be worth the effort.

You can call it exotic, but it is what is used in an official demo file which is featured on blender.org and is used in official benchmarks.

P.S. I am fine with warning, but i am not fine with silent failure on such files. I had enough confusion about this to be explained.

You can call it exotic, but it is what is used in an official demo file which is featured on blender.org and is used in official benchmarks. P.S. I am fine with warning, but i am not fine with silent failure on such files. I had enough confusion about this to be explained.

Added subscriber: @Lewiatan

Added subscriber: @Lewiatan

I rather see this fixed or have a workaround of this problem, because I would be quite irritated being stuck in the outdated version of Blender because don't want to lose a large amount of work. As far as I've heard 2.80 was suppoused to be backward compatible. If DupliGroups were used by official Blender devs, they should work in 2.80 too. In my case, I had no idea I have had DupliGroup in my blend.file for god know for how long and I'd be happy to find out how to get rid off it.

I rather see this fixed or have a workaround of this problem, because I would be quite irritated being stuck in the outdated version of Blender because don't want to lose a large amount of work. As far as I've heard 2.80 was suppoused to be backward compatible. If DupliGroups were used by official Blender devs, they should work in 2.80 too. In my case, I had no idea I have had DupliGroup in my blend.file for god know for how long and I'd be happy to find out how to get rid off it.

@Lewiatan DupliGroups are still working with empties, which are the only type of objects where they were making sense in the first place. Having those on other object types was just a nice source of confusion. And 2.80 is not 100% backward-compatible, though we try to keep it that way as much as possible. Projects started with 2.79 should be finished on that version really, unless you understand and know what you are doing when switching to 2.80.

@Lewiatan DupliGroups are still working with empties, which are the only type of objects where they were making sense in the first place. Having those on other object types was just a nice source of confusion. And 2.80 is not 100% backward-compatible, though we try to keep it that way as much as possible. Projects started with 2.79 should be finished on that version really, unless you understand and know what you are doing when switching to 2.80.

Added subscriber: @Darth-Blender

Added subscriber: @Darth-Blender
Campbell Barton was unassigned by Bastien Montagne 2019-06-04 14:45:14 +02:00
Bastien Montagne self-assigned this 2019-06-04 14:45:14 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Over one week, stealing this to fix now.

Over one week, stealing this to fix now.

This issue was referenced by 2fb54ef86e

This issue was referenced by 2fb54ef86e57598e4d27987066db7a06a8269413

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @edolstra

Added subscriber: @edolstra

It's worth noting that https:*developer.blender.org/rB2fb54ef86e57598e4d27987066db7a06a8269413 appears to break the "classroom" demo (https:*download.blender.org/demo/test/classroom.zip). Opening it now prints a few dozen warnings like:

  Warning: Non-Empty object 'chair' cannot duplicate collection 'schoolDesk' anymore in Blender 2.80, removed instancing

and indeed numerous objects in the scene are now empties.

It's worth noting that https:*developer.blender.org/rB2fb54ef86e57598e4d27987066db7a06a8269413 appears to break the "classroom" demo (https:*download.blender.org/demo/test/classroom.zip). Opening it now prints a few dozen warnings like: ``` Warning: Non-Empty object 'chair' cannot duplicate collection 'schoolDesk' anymore in Blender 2.80, removed instancing ``` and indeed numerous objects in the scene are now empties.

https:*download.blender.org/demo/test/classroom.zip should be updated from https:*svn.blender.org/svnroot/bf-blender/trunk/lib/benchmarks/cycles/classroom/

https:*download.blender.org/demo/test/classroom.zip should be updated from https:*svn.blender.org/svnroot/bf-blender/trunk/lib/benchmarks/cycles/classroom/

@ideasman42, unless the web team is notified, or someone with the access to ftp actually does this, is not gonna to happen.

@ideasman42, unless the web team is notified, or someone with the access to ftp actually does this, is not gonna to happen.

What's the best way to notify the web team?

What's the best way to notify the web team?

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez

Ok, guess you didn't poke them yet. So i've updated the archive.

@pablovazquez , not sure if you want to make some further tweaks or notifications about demo being updated.

@mont29. opening file from command line does not show any warnings.

Ok, guess you didn't poke them yet. So i've updated the archive. @pablovazquez , not sure if you want to make some further tweaks or notifications about demo being updated. @mont29. opening file from command line does not show any warnings.

@Sergey am getting bunch of warnings in the console… Fact that it does not show in UI is most certainly a separate issue related to how reports are working in Blender, looks like they are not 'ready' to show up during launch time for some reason…

@Sergey am getting bunch of warnings in the console… Fact that it does not show in UI is most certainly a separate issue related to how reports are working in Blender, looks like they are not 'ready' to show up during launch time for some reason…
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65054
No description provided.